<resources>
    <string name="app_name">Bottom Navigation Application</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Home">Home</string>
    <string name="details">Details</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="detail">User\'s Details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="contact">Contact Number</string>
    <string name="Enter_your_number">Enter your number</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="Email">Email</string>
    <string name="Enter_your_email">Enter your Email\n</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="hello">Hello</string>
    <string name="submit">Submit</string>
    <string name="login_page">Login Page</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
</resources>